<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kugri Client Helloworld</string>
    <string name="hello">Hello my-android-project!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="message_sender">Sender</string>
    <string name="message_receiver">Receiver</string>
    <string name="message_content">Content</string>
    <string name="message_stamp">Stamp</string>
    <string name="message_status">Status</string>
    
    <string name="account_email">Your email goes here..</string>
    <string name="account_password">Your password goes here..</string>
    
    <string name="activity_login">Login</string>
    <string name="activity_register">Register</string>
    <string name="activity_lost">Lost</string>
    <string name="activity_cancel">Cancel</string>
    <string name="activity_back">Back</string>
    
    <string name="receiver_text">Receiver</string>
    <string name="content_text">Content</string>
    <string name="content_hint">The message goes here.. </string>
    <string name="send_text">Send</string>
    
    <string name="row_description">This is a desccription about the row.</string>

</resources>