<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f9fe"
    android:orientation="vertical" 
    android:scrollbars="vertical">
    
    <Spinner
	    android:id="@+id/spinnerbox"
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:gravity="center_vertical"
	    android:layout_weight="0.2" />
    
	<ListView
        android:id="@+id/message_list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:divider="#b5b5b5"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/list_selector" 
        android:layout_weight="1"/>
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:background="#f8f9fe"
	    android:orientation="vertical" 
	    android:layout_weight="1">
	    
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:background="#f8f9fe"
		    android:orientation="horizontal"		    
		    android:layout_weight="1">
		    
	        <TextView
			    android:id="@+id/viewreveiver"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:text="@string/receiver_text"
			    android:gravity="center_vertical"
			    android:layout_weight="1.5" />
	
			<Spinner
			    android:id="@+id/spinnerreceivervew"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:gravity="center_vertical"
			    android:layout_weight="0.5" />
		</LinearLayout>
		
	    <TextView
		    android:id="@+id/viewcontent"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:text="@string/content_text"
		    android:gravity="center_vertical"
		    android:layout_weight="1" />

		<EditText
		    android:id="@+id/editcontent"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:hint="@string/content_hint"
		     
		    android:layout_weight="1" />
		
	    <Button
		    android:id="@+id/buttonsend"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:text="@string/send_text"
		    android:layout_weight="1" />
	    
	</LinearLayout>

</LinearLayout>