<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal"
    android:padding="5dip" >
 
    <!--  ListRow Left sied Thumbnail image -->
    <LinearLayout android:id="@+id/message_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dip">
 
        <ImageView
            android:id="@+id/message_image"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:src="@android:drawable/ic_dialog_alert"
            android:contentDescription="@string/row_description"/>
 
    </LinearLayout>
 
    <!-- Message Sender-->
    <TextView
        android:id="@+id/message_sender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/message_thumbnail"
        android:layout_toRightOf="@+id/message_thumbnail"
        android:text="@string/message_sender"
        android:textColor="#040404"
        android:typeface="sans"
        android:textSize="15sp"
        android:textStyle="bold"/>
 
    <!-- Message Content -->
    <TextView
        android:id="@+id/message_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_sender"
        android:textColor="#343434"
        android:textSize="12sp"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/message_thumbnail"
        android:text="@string/message_content" />
 
    <!-- Message Receiver -->
    <TextView
        android:id="@+id/message_receiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/message_sender"
        android:gravity="right"
        android:text="@string/message_receiver"
        android:layout_marginRight="5dip"
        android:textSize="12sp"
        android:textColor="#10bcc9"
        android:textStyle="bold"/>
 
     <!-- Rightend Arrow -->
     <ImageView 
        android:id="@+id/message_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/row_description"/>
 
</RelativeLayout>